# ndisc.play

./: CHANGELOG.md  Makefile  README.md  index.html  nplay.desktop.in  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CollapsedStrip.tsx  CurrentView.tsx  LibraryTree.tsx  NowPlaying.tsx  PlayerBar.tsx  Playlist.tsx  Queue.tsx  ScanProgressBar.tsx  Section.tsx  Spectrum.tsx  TableView.tsx  Video.tsx
src/hooks/: useFeed.ts
src/lib/: format.ts  tauri.ts  xspf.ts
