[package]
name = "nplay"
version = "0.1.0-beta.1"
description = "Local audio/video player for the ndisc suite"
authors = ["xjmzx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local music library index. Same versions ndisc pins.
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
rayon = "1"
# Tag + embedded-cover reader. Matches ndisc.
lofty = "0.22"
# Native audio output + decoding. WebKit2GTK's media element can't play from
# app URI schemes on this stack, so playback lives in Rust. The symphonia
# backend (default decoders off) gives uniform seeking across FLAC/MP3 plus
# AIFF and the audio track of video files.
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
# Loopback HTTP server (127.0.0.1) so the webview <video> element can stream
# local media with Range support — WebKit2GTK refuses local media over app URI
# schemes (asset:// → MediaError 4) but plays it fine over http://localhost.
tiny_http = "0.12"
percent-encoding = "2"
